# ZeroPDF

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  SKILL.md  deny.toml
.github/workflows/: platform-bundles.yml
distribution/: README.md
distribution/public-package/: .gitignore  README.md  README.template.md  SKILL.md  SKILL.template.md  export-report.json  mcp.json
distribution/public-package-releases/: zeropdf-public-package-1.0.0-20260309_181955.SHA256SUMS.txt  zeropdf-public-package-1.0.0-20260309_181955.manifest.json
distribution/templates/: platform-package-README.template.md  platform-package-mcp.template.json
scripts/: build_platform_bundle.py  build_public_package_release.py  export_public_package.py
scripts/tests/: test_build_platform_bundle.py  test_build_public_package_release.py  test_export_public_package.py
src/: agent_comments.rs  annotations.rs  doctor.rs  errors.rs  init.rs  lib.rs  main.rs  mcp.rs  pdf_ops.rs  schema.rs
tests/: integration.rs
